--- a/index.html
+++ b/index.html
@@ -154,6 +154,6 @@
                 </div>
             </div>
         </div>
-        <script src="/app.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
