--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Sadhana Tracker</title>
-        <link rel="stylesheet" href="style.css" />
+        <!-- FIX: Using absolute path for GitHub Pages sub-directory -->
+        <link rel="stylesheet" href="/Sadhana-tracker/style.css" /> 
         <!-- Firebase SDKs from CDN -->
         <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
         <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
@@ -153,7 +154,7 @@
                     <div id="admin-users-list"></div>
                 </div>
             </div>
-        </div>
-        <script src="app.js"></script>
+            <!-- FIX: Using absolute path for GitHub Pages sub-directory -->
+            <script src="/Sadhana-tracker/app.js"></script> 
     </body>
 </html>
