--- a/index.html
+++ b/index.html
@@ -10,120 +10,101 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <style>
         :root { --primary: #2c3e50; --secondary: #3498db; --success: #27ae60; --danger: #e74c3c; --light: #f4f7f6; --white: #ffffff; }
-        body { font-family: 'Segoe UI', sans-serif; background: var(--light); margin: 0; color: #333; }
-        .container { max-width: 1000px; margin: 0 auto; padding: 20px; }
+        body { font-family: 'Segoe UI', sans-serif; background: var(--light); margin: 0; padding: 0; }
+        .container { max-width: 900px; margin: 0 auto; padding: 15px; }
         .hidden { display: none !important; }
-        .card { background: var(--white); padding: 25px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); margin-bottom: 20px; }
-        input, select, button { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 6px; box-sizing: border-box; }
-        button { background: var(--secondary); color: white; border: none; cursor: pointer; font-weight: bold; }
-        .header { display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid #eee; padding-bottom: 15px; margin-bottom: 20px; }
-        .nav-tabs { display: flex; gap: 10px; margin-bottom: 20px; overflow-x: auto; }
-        .tab-btn { background: #ddd; padding: 10px 20px; border-radius: 20px; width: auto; white-space: nowrap; }
-        .tab-btn.active { background: var(--secondary); color: white; }
-        .input-group { display: flex; gap: 10px; margin-bottom: 5px; }
+        .card { background: var(--white); padding: 20px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); margin-bottom: 20px; }
+        input, select, button { width: 100%; padding: 12px; margin: 8px 0; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; font-size: 16px; }
+        button { background: var(--secondary); color: white; border: none; cursor: pointer; font-weight: 600; transition: 0.3s; }
+        button:disabled { background: #bdc3c7; }
+        .input-group { display: flex; gap: 8px; margin-bottom: 5px; }
         .input-group input { flex: 1; margin: 0; }
-        .admin-table { width: 100%; border-collapse: collapse; background: white; font-size: 13px; }
-        .admin-table th, .admin-table td { border: 1px solid #ddd; padding: 10px; text-align: center; }
-        .user-item { display: flex; justify-content: space-between; align-items: center; padding: 15px; border-bottom: 1px solid #eee; background: white; margin-bottom: 5px; border-radius: 8px; }
-        .modal { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); display: flex; justify-content: center; align-items: center; z-index: 1000; }
-        .modal-content { background: white; width: 95%; max-width: 850px; max-height: 90vh; padding: 25px; border-radius: 12px; overflow-y: auto; position: relative; }
-        label b { display: block; margin-top: 10px; color: var(--primary); }
+        label { font-weight: bold; font-size: 14px; color: var(--primary); display: block; margin-top: 10px; }
+        .nav-tabs { display: flex; gap: 8px; overflow-x: auto; padding-bottom: 10px; }
+        .tab-btn { width: auto; white-space: nowrap; background: #ecf0f1; color: #7f8c8d; padding: 8px 15px; border-radius: 20px; }
+        .tab-btn.active { background: var(--secondary); color: white; }
     </style>
 </head>
 <body>
-<div class="container">
-    <section id="auth-section" class="card">
-        <h2 style="text-align: center;">Sadhana Tracker</h2>
-        <form id="login-form">
-            <input type="email" id="login-email" placeholder="Email" required>
-            <input type="password" id="login-password" placeholder="Password" required>
-            <button type="submit">Login</button>
-        </form>
-    </section>
+    <div class="container">
+        <section id="auth-section" class="card">
+            <h2 style="text-align:center">Sadhana Tracker</h2>
+            <form id="login-form">
+                <input type="email" id="login-email" placeholder="Email" required>
+                <input type="password" id="login-password" placeholder="Password" required>
+                <button type="submit">Login</button>
+            </form>
+        </section>
 
-    <section id="profile-section" class="card hidden">
-        <h2>Complete Profile</h2>
-        <form id="profile-form">
-            <input type="text" id="profile-name" placeholder="Full Name" required>
-            <select id="profile-chanting" required>
-                <option value="">Select Category</option>
-                <option value="Level-1">Level-1 (0-4 Rounds)</option>
-                <option value="Level-2">Level-2 (5-8 Rounds)</option>
-                <option value="Level-3">Level-3 (9-16 Rounds)</option>
-                <option value="Level-4">Level-4 (16+ Coordinator)</option>
-            </select>
-            <input type="number" id="profile-exact-rounds" placeholder="Exact Rounds" required>
-            <button type="submit">Save Profile</button>
-        </form>
-    </section>
+        <section id="profile-section" class="card hidden">
+            <h2>Complete Profile</h2>
+            <form id="profile-form">
+                <input type="text" id="profile-name" placeholder="Full Name" required>
+                <select id="profile-chanting" required>
+                    <option value="">Select Category</option>
+                    <option value="Level-1">Level-1 (0-4 Rounds)</option>
+                    <option value="Level-2">Level-2 (5-8 Rounds)</option>
+                    <option value="Level-3">Level-3 (9-16 Rounds)</option>
+                    <option value="Level-4">Level-4 (16+ Coordinator)</option>
+                </select>
+                <input type="number" id="profile-exact-rounds" placeholder="Current Rounds" required>
+                <button type="submit">Save & Continue</button>
+            </form>
+        </section>
 
-    <section id="dashboard-section" class="hidden">
-        <div class="header">
-            <h3 id="user-display-name"></h3>
-            <button id="logout-btn" style="width: auto; background: #95a5a6;">Logout</button>
-        </div>
-        <div class="nav-tabs">
-            <button class="tab-btn active" onclick="switchTab('sadhana')">Entry</button>
-            <button class="tab-btn" onclick="switchTab('reports')">Reports</button>
-            <button class="tab-btn hidden" id="admin-tab-btn" onclick="switchTab('admin')">Admin</button>
-        </div>
+        <section id="dashboard-section" class="hidden">
+            <div class="card" style="display:flex; justify-content:space-between; align-items:center">
+                <span id="user-display-name" style="font-weight:bold"></span>
+                <button id="logout-btn" style="width:auto; padding:5px 15px; background:var(--danger)">Logout</button>
+            </div>
 
-        <div id="sadhana-tab" class="tab-content">
-            <div class="card">
-                <h3>Submit Daily Sadhana</h3>
+            <div class="nav-tabs">
+                <button class="tab-btn active" onclick="switchTab('sadhana')">Daily Entry</button>
+                <button class="tab-btn" onclick="switchTab('reports')">My History</button>
+                <button class="tab-btn hidden" id="admin-tab-btn" onclick="switchTab('admin')">Admin Panel</button>
+            </div>
+
+            <div id="sadhana-tab" class="tab-content card">
                 <form id="sadhana-form">
-                    <label>Date:</label><select id="sadhana-date" required></select>
-                    <label>Bed Time:</label><input type="time" id="sleep-time" required>
-                    <label>Wake Up:</label><input type="time" id="wakeup-time" required>
-                    <label>Chanting (Last round by):</label><input type="time" id="chanting-time" required>
+                    <label>Date</label><select id="sadhana-date" required></select>
+                    <label>Bed Time (Yesterday)</label><input type="time" id="sleep-time" required>
+                    <label>Wake Up Time</label><input type="time" id="wakeup-time" required>
+                    <label>Chanting (Last round by)</label><input type="time" id="chanting-time" required>
 
-                    <label><b>Reading:</b></label>
+                    <label>Reading (Pathan)</label>
                     <div class="input-group">
-                        <input type="number" id="reading-hrs" placeholder="Hrs" min="0">
-                        <input type="number" id="reading-mins" placeholder="Mins" min="0" max="59">
+                        <input type="number" id="reading-hrs" placeholder="Hrs">
+                        <input type="number" id="reading-mins" placeholder="Mins">
                     </div>
 
-                    <label><b>Hearing:</b></label>
+                    <label>Hearing (Shravan)</label>
                     <div class="input-group">
-                        <input type="number" id="hearing-hrs" placeholder="Hrs" min="0">
-                        <input type="number" id="hearing-mins" placeholder="Mins" min="0" max="59">
+                        <input type="number" id="hearing-hrs" placeholder="Hrs">
+                        <input type="number" id="hearing-mins" placeholder="Mins">
                     </div>
 
                     <div id="service-area" class="hidden">
-                        <label><b>Service:</b></label>
+                        <label>Service (Seva)</label>
                         <div class="input-group">
-                            <input type="number" id="service-hrs" placeholder="Hrs" min="0">
-                            <input type="number" id="service-mins" placeholder="Mins" min="0" max="59">
+                            <input type="number" id="service-hrs" placeholder="Hrs">
+                            <input type="number" id="service-mins" placeholder="Mins">
                         </div>
                     </div>
 
-                    <label>Day Sleep (Mins):</label>
-                    <input type="number" id="day-sleep-minutes" placeholder="0" required>
-                    
-                    <button type="submit" id="submit-btn">Submit Entry</button>
+                    <label>Day Sleep (Mins)</label><input type="number" id="day-sleep-minutes" value="0">
+                    <button type="submit" id="submit-btn">Submit Sadhana</button>
                 </form>
             </div>
-        </div>
 
-        <div id="reports-tab" class="tab-content hidden">
-            <div id="weekly-reports-container"></div>
-        </div>
+            <div id="reports-tab" class="tab-content hidden card">
+                <div id="weekly-reports-container"></div>
+            </div>
 
-        <div id="admin-tab" class="tab-content hidden">
-            <div id="admin-comparative-reports-container"></div>
-            <div id="admin-users-list"></div>
-        </div>
-    </section>
-</div>
-
-<div id="user-report-modal" class="modal hidden">
-    <div class="modal-content">
-        <span onclick="closeUserModal()" style="float:right; cursor:pointer; font-size:24px;">&times;</span>
-        <h2 id="modal-user-name"></h2>
-        <div id="modal-report-container"></div>
+            <div id="admin-tab" class="tab-content hidden card">
+                <div id="admin-users-list"></div>
+            </div>
+        </section>
     </div>
-</div>
-
-<script src="app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
